v2.2 Further streamlined for deleted homes notifications. Daily notification for homes that have last date today.
Other util methods extracted.
Further major and minor updates.